--- a/css/style.css
+++ b/css/style.css
@@ -763,9 +763,8 @@ thumbnail .image {
 
 #loading {
     background: rgba(0,0,0,0.5);
-    height: auto;
+    height: 100%;
     width: 100%;
-    height: 768px;
     position: absolute;
 	left:0;
     z-index: 99;
@@ -776,6 +775,9 @@ thumbnail .image {
 .loader-block{widht:50px; margin:0 auto; text-align:center; margin-top:250px;}
 .loader-block span{color:#fff; font-size:18px;}
 .spinloader{font-size:40px !important; position:relative !important; left:0; color:#fff;}
+.pr-block{margin:20px 0; padding:15px;}
+.reservation-details{border-top: 1px solid #eee; padding:20px 0;}
+
 
 @media (min-width: 768px) {
 	
