--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@
 	font-style: normal;
 }
 
-body{ font-family: 'OpenSans'; background:#fff; margin-top: 0;}
+body{ font-family: 'OpenSans'; background:#f2f2f2; margin-top: 0;}
 
 h1, h1 {
 	font-size:17pt;
@@ -186,7 +186,7 @@ animation-direction:alternate;
 .dropdown-submenu>.dropdown-menu {top:0;left:100%; margin-top:-6px;margin-left:-1px; -webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
 .dropdown-submenu > a:after {border-color: transparent transparent transparent #333; border-style: solid; border-width: 5px 0 5px 5px; content: " "; display: block; float: right; height: 0; margin-right: -10px; margin-top: 5px; width: 0;} 
 .dropdown-submenu:hover>a:after {border-left-color:#555;}
-.dropdown-menu > li > a:hover, .dropdown-menu > .active > a:hover {text-decoration: underline;} 
+.dropdown-menu > li > a:hover, .dropdown-menu > .active > a:hover {text-decoration: none;} 
 
 /*###################*/
 /*## CSS for Slides ##*/
@@ -533,6 +533,57 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a108c7', end
 .searchFields{width:60%; margin:0 auto; padding-top:20px;}
 .closeBtn{width:30px; height:30px; font-size:20px; padding:0; border-radius:30px; background:#000; right:-10px; top:-10px;  position:absolute;}
 .bookBtn:hover, .closeBtn:hover{background:#F90; cursor:pointer;}
+
+.page-content{background:#fff; margin:20px auto; padding:20px 0;}
+.room-row{margin-bottom:5px; border-bottom:solid 1px #c7c9cf;}
+
+/*Select Drop Down*/
+.multiselect-container{position:absolute;list-style-type:none;margin:0;padding:0; min-width:auto!important;}
+.multiselect-container .input-group{margin:5px}
+.multiselect-container>li{padding:0}
+.multiselect-container>li>a.multiselect-all label{font-weight:bold}
+.multiselect-container>li>label.multiselect-group{margin:0;padding:3px 20px 3px 10px;height:100%;font-weight:bold;}
+.multiselect-container>li>a>label{margin:0;height:100%;cursor:pointer;font-weight:normal}
+.multiselect-container>li>a>label.radio,.multiselect-container>li>a>label.checkbox{margin:0;}
+.multiselect-container>li>a>label>input[type="checkbox"]{margin-bottom:5px}
+.btn-group>.btn-group:nth-child(2)>.multiselect.btn{border-top-left-radius:4px;border-bottom-left-radius:4px}
+.ddbtn .btn {
+    padding: 5px 10px;
+    font-size: 13px;
+    line-height: 1.33;
+    border-radius: 3px;
+	font-weight:bold;
+	font-family:'OpenSans';
+	
+}
+.rooms .btn {
+    padding: 5px 10px;
+    font-size: 13px;
+    line-height: 1.33;
+    border-radius: 3px;
+	font-weight:bold;
+	font-family:'OpenSans';
+	background:#f5a623;
+	color:#fff;
+}
+.extraItems .btn{
+	padding: 5px 10px;
+    font-size: 13px;
+    line-height: 1.33;
+    border-radius: 3px;
+	font-weight:bold;
+	font-family:'OpenSans';
+	background:#d84e55;
+	color:#fff;
+}
+.extraItems .dropdown-menu>li>a:hover{background:#fff; color:#262626}
+.extraItems .dropdown-menu>.active>a{background:#333333; color:#fff}
+.extraItems .multiselect-container>li>a>label.radio,.multiselect-container>li>a>label.checkbox{margin:0; margin-left: 5px;}
+
+.ddbtn .dropdown-menu>.active>a, .rooms .dropdown-menu>.active>a{
+	background:#333333;	
+}
+.roomTypeList td{vertical-align:middle!important;}
 
 
 
