--- a/css/custom.css
+++ b/css/custom.css
@@ -302,10 +302,10 @@ body.nav-md .container.body .right_col {
   border: 1px solid #50C1CF !important;
   color: #fff;
 }
-.container {
+/*.container {
   width: 100%;
   padding: 0
-}
+}*/
 .navbar-nav>li>a, .navbar-brand, .navbar-nav>li>a {
   color: #fff !important;
 }
@@ -671,15 +671,15 @@ li.current-page a {
   padding: 4px 6px;
 }
 .x_content canvas {}
-footer {
+/*footer {
   background: #fff;
   padding: 15px 20px;
   margin: 0 -10px;
-}
+}*/
 @media (min-width: 768px) {
-  footer {
+  /*footer {
     margin: 0 -20px;
-  }
+  }*/
 }
 .tile-stats.sparkline {
   padding: 10px;
