--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a108c7', end
 .calculationBox{padding:20px 15px; margin-top:30px;}
 .calculationBox h5{font-size:18px;}
 .Totalprice{font-size:20px; color:#DD2024; padding-bottom:10px;}
+.searchFrm{margin-top:30px;}
 
 
 
