--- a/css/style.css
+++ b/css/style.css
@@ -760,6 +760,22 @@ thumbnail .image {
 .compltBtn{padding:15px 0;}
 #backBtn{display:none;}
 
+#loading {
+    background: rgba(0,0,0,0.5);
+    height: auto;
+    width: 100%;
+    height: 768px;
+    position: absolute;
+	left:0;
+    z-index: 99;
+    display: none;
+    top: 0;
+}
+#loader{background:rgba(0,0,0,0.5); height:auto; width:100%; height: 768px; position:fixed; z-index:99; display:none; top:0;}
+.loader-block{widht:50px; margin:0 auto; text-align:center; margin-top:250px;}
+.loader-block span{color:#fff; font-size:18px;}
+.spinloader{font-size:40px !important; position:relative !important; left:0; color:#fff;}
+
 @media (min-width: 768px) {
 	
   .navBg ul.nav li:hover > ul.dropdown-menu {
