payment report done admin side

--- a/css/style.css
+++ b/css/style.css
@@ -882,6 +882,8 @@ thumbnail .image {
 .media-center a:hover, .media-bottom a:hover{color:#ff891e; 
     transition: color 0.3s ease-out;}
 
+.paymentTbl td span{color:#ff0000;}
+
 
 
 
